test_programs/compile_failure/noirc_frontend_tests_enums_match_integer_type_mismatch_in_pattern/src/main.nr

        fn main() {
            match 2 {
                Foo::One(_) => (),
            }
        }

        enum Foo {
            One(i32),
        }
    